@@ -1,3 +1,9 @@
+2021-03-07  Allen D. Ball  <ball@hcf.dev>
+
+	* Modified Analyzer.getShadedArtifactSet(File) to search for
+	META-INF/shaded-artifacts before applying heuristics.  Generate
+	META-INF/shaded-artifacts for ganymede-kernel.jar.
+
 2021-03-05  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/dependency/Resolver.java:
